--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
 Запануєм i ми, браття, у своїй сторонці.
 Душу й тіло ми положим за нашу свободу,
 І покажем, що ми, браття, козацького роду. -->
+
+	<div class="container">
+		<div class="box-flag"></div>
+		<div class="box-info"></div>	
+	</div>
 </body>
 </html>
