--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
 І покажем, що ми, браття, козацького роду. -->
 
 	<div class="container">
-		<div class="box-flag"></div>
+		<div class="box-flag">
+			<div class="line1 line"></div>
+			<div class="line2 line"></div>
+			<div class="line3 line"></div>
+			<div class="line4 line"></div>
+			<div class="line5 line"></div>
+			<div class="line6 line"></div>
+			<div class="line7 line"></div>
+			<div class="line8 line"></div>
+		</div>
 		<div class="box-info"></div>	
 	</div>
 </body>
