--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 Душу й тіло ми положим за нашу свободу,
 І покажем, що ми, браття, козацького роду. -->
 
-	<div class="container">
+	<!-- <div class="container"> -->
 		<div class="box-flag">
 			<div class="line1 line"></div>
 			<div class="line2 line"></div>
@@ -22,8 +22,10 @@
 			<div class="line6 line"></div>
 			<div class="line7 line"></div>
 			<div class="line8 line"></div>
-		</div>
-		<div class="box-info"></div>	
+		<!-- </div> -->
+		<div class="box-info">
+			<a class="instagram" href="https://www.instagram.com/"><div class="circle"></div></a>
+		</div>	
 	</div>
 </body>
 </html>
