--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title>UA</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<meta name="viewport" content="width=device-width, height=device-height"></head>
+	<meta name="viewport" content="width=device-width, height=device-height">
+</head>
 <body>
 	<!-- Ще не вмерли України і слава, і воля,
 Ще нам, браття молодії, усміхнеться доля.
@@ -12,7 +13,7 @@
 Душу й тіло ми положим за нашу свободу,
 І покажем, що ми, браття, козацького роду. -->
 
-	<!-- <div class="container"> -->
+	<div class="container">
 		<div class="box-flag">
 			<div class="line1 line"></div>
 			<div class="line2 line"></div>
@@ -22,7 +23,7 @@
 			<div class="line6 line"></div>
 			<div class="line7 line"></div>
 			<div class="line8 line"></div>
-		<!-- </div> -->
+		</div>
 		<div class="box-info">
 			<a class="instagram" href="https://www.instagram.com/"><div class="circle"></div></a>
 		</div>	
