--- a/index.html
+++ b/index.html
@@ -12,8 +12,20 @@
 Запануєм i ми, браття, у своїй сторонці.
 Душу й тіло ми положим за нашу свободу,
 І покажем, що ми, браття, козацького роду. -->
-
+	
 	<div class="container">
+		<div class="box-rhombus">
+			<div class="rhombus1 common-to-rhombuses"></div>
+			<div class="rhombus2 common-to-rhombuses"></div>
+			<div class="rhombus3 common-to-rhombuses"></div>
+			<div class="rhombus4 common-to-rhombuses"></div>
+			<div class="rhombus5 common-to-rhombuses"></div>
+			<div class="rhombus6 common-to-rhombuses"></div>
+			<div class="rhombus7 common-to-rhombuses"></div>
+			<div class="rhombus8 common-to-rhombuses"></div>
+			<div class="rhombus9 common-to-rhombuses"></div>
+			<div class="rhombus10 common-to-rhombuses"></div>
+		</div>
 		<div class="box-flag">
 			<div class="line1 line"></div>
 			<div class="line2 line"></div>
