Added a script that does not work

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>UA</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta name="viewport" content="width=device-width, height=device-height">
+	<script src="jquery.min.js"></script>
+	<script src="play-anthem.js"></script>
 </head>
 <body>
 	<!-- Ще не вмерли України і слава, і воля,
@@ -34,11 +36,13 @@
 			<div class="line5 line"></div>
 			<div class="line6 line"></div>
 			<div class="line7 line"></div>
-			<div class="line8 line"></div>
+			<div class="line8 line" id="sound1"></div><audio id="sound" src="audio/ogg/1.ogg" preload="auto" controls></audio>
 		</div>
 		<div class="box-info">
 			<a class="instagram" href="https://www.instagram.com/"><div class="circle"></div></a>
 		</div>	
 	</div>
+
+	
 </body>
 </html>
