added social networks

--- a/index.html
+++ b/index.html
@@ -36,13 +36,21 @@
 			<div class="line5 line"></div>
 			<div class="line6 line"></div>
 			<div class="line7 line"></div>
-			<div class="line8 line" id="sound1"></div><audio id="sound" src="audio/ogg/1.ogg" preload="auto" controls></audio>
+			<div class="line8 line" id="sound1"></div>
 		</div>
 		<div class="box-info">
-			<a class="instagram" href="https://www.instagram.com/"><div class="circle"></div></a>
+			<a href="https://www.instagram.com/ll0l_1">
+				<img class="instagram" src="logo/insta-logo.png">
+			</a>
+
+			<a href="https://github.com/vertically-challenged/UA">
+				<img class="github" src="logo/github-octocat.png">
+			</a>
 		</div>	
 	</div>
-
 	
+	<!-- Звуки родины -->
+	<!-- Почему-то не звучат -->
+	<audio id="sound" src="audio/ogg/1.ogg" preload="auto" controls></audio>
 </body>
 </html>
