--- a/index.html
+++ b/index.html
@@ -57,5 +57,7 @@
 	<audio id="sound07" src="audio/ogg/7.ogg" preload="auto" controls></audio>
 	<audio id="sound08" src="audio/ogg/8.ogg" preload="auto" controls></audio>
 	<script src="play-anthem.js"></script>
+
+	<div class="toplink">дабл кликните в любое место для активации звука на сайте</div>
 </body>
 </html>
