--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 			<div class="line8 line" id="sound1"></div>
 		</div>
 		<div class="box-info">
-			<a href="https://www.instagram.com/ll0l_1">
+			<!-- <a href="">
 				<img class="instagram" src="logo/insta-logo.png">
-			</a>
+			</a> -->
 
 			<a href="https://github.com/vertically-challenged/UA">
 				<img class="github" src="logo/github-octocat.png">
