one more one fix

--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
 	<audio id="sound08" src="audio/ogg/8.ogg" preload="auto" controls></audio>
 	<script src="play-anthem.js"></script>
 
-	<div class="toplink">дабл кликните в любое место для активации звука на сайте</div>
+	<div class="toplink">кликните в любое место для активации звука на сайте</div>
 </body>
 </html>
