--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 				<img class="instagram" src="logo/insta-logo.png">
 			</a> -->
 
-			<a href="https://github.com/vertically-challenged/UA">
+			<!-- <a href="https://github.com/vertically-challenged/UA">
 				<img class="github" src="logo/github-octocat.png">
-			</a>
+			</a> -->
 		</div>	
 	</div>
 	
